Application Istio Fluxcd manifests
This commit creates the manifests for Istio deployment and Kiali.
Istio operator is used to deploy the Istio components (data-plane,
control-plane, gateway and cni).

This commit also up-versioned Istio from 1.13.2 to 1.13.3.

Test Plan:
Pass: Centos: istio application uploaded/applied manually
Pass: Debian build successfully

Story: 2009912
Task: 45191

Change-Id: I3e9dc0605c53e329277fc507aada565b5182b484
Signed-off-by: Teresa Ho <teresa.ho@windriver.com>

--- a/istio-helm/debian/deb_folder/rules
+++ b/istio-helm/debian/deb_folder/rules
@@ -3,8 +3,7 @@
 
 export ROOT = debian/tmp
 export CHART_FOLDER = $(ROOT)/usr/lib/helm
-export ISTIO_VERSION = 1.13.2
-export ISTIO_TARBALL="helm-charts-istio-1.13.2.tgz
+export ISTIO_VERSION = 1.13.3
 
 %:
 	dh $@
@@ -17,6 +16,7 @@ override_dh_auto_build:
 	helm repo add local http://localhost:8879/charts
 	# Set up chart build files.
 	cp Makefile manifests/charts
+	find . -type f -name "Chart.yaml" -exec sed -i -e '/version/ s/:.*/: ${ISTIO_VERSION}/' {} \;
 	# Create the TGZ file.
 	cd manifests/charts && make istio-operator
 	pkill chartmuseum
