--- a/istio-helm/debian/meta_data.yaml
+++ b/istio-helm/debian/meta_data.yaml
@@ -2,14 +2,14 @@
 debname: istio-helm
 debver: 1.0-1
 dl_path:
-  name: helm-charts-istio-1.13.2.tar.gz
-  url: https://github.com/istio/istio/archive/refs/tags/1.13.2.tar.gz 
-  md5sum: d5b109c3332d10b7fb8214b0d23ff90b
+  name: helm-charts-istio-1.13.3.tar.gz
+  url: https://github.com/istio/istio/archive/refs/tags/1.13.3.tar.gz
+  md5sum: 908fcd8e947a831883b76144939b79d0
 src_files:
-  - istio-helm/files/index.yaml
-  - istio-helm/files/Makefile
-  - istio-helm/files/metadata.yaml
-  - istio-helm/files/repositories.yaml
+  - files/index.yaml
+  - files/Makefile
+  - files/metadata.yaml
+  - files/repositories.yaml
 revision:
   dist: $STX_DIST
   PKG_GITREVCOUNT: true
