--- a/python-k8sapp-istio/k8sapp_istio/setup.cfg
+++ b/python-k8sapp-istio/k8sapp_istio/setup.cfg
@@ -33,8 +33,8 @@ systemconfig.helm_applications =
     istio = systemconfig.helm_plugins.istio
 
 systemconfig.helm_plugins.istio =
-    001_istio = k8sapp_istio.helm.istio:IstioHelm
-    002_kiali = k8sapp_istio.helm.kiali:KialiHelm
+    001_istio-operator = k8sapp_istio.helm.istio_operator:IstioHelm
+    002_kiali-server = k8sapp_istio.helm.kiali_server:KialiHelm
 
 [wheel]
 universal = 1
