--- a/stx-istio-helm/stx-istio-helm/fluxcd-manifests/kiali-server/kiali-server-static-overrides.yaml
+++ b/stx-istio-helm/stx-istio-helm/fluxcd-manifests/kiali-server/kiali-server-static-overrides.yaml
@@ -8,10 +8,10 @@ replicaCount: 1
 namespace: istio-system
 images:
   tags:
-    kiali: docker.io/starlingx/kiali-server:stx.7.0-v0.1.0
-image:
-  host: registry.local:9001/docker.io/starlingx
-  image: kiali-server 
-  tags: stx.7.0-v0.1.0
-  tag: stx.7.0-v0.1.0
+    kiali: quay.io/kiali/kiali:v1.45.0
+deployment:
+  image_name: registry.local:9001/quay.io/kiali/kiali
+  image_pull_secrets: ["default-registry-key"]
+  image_version: v1.45.0
+  version_label: v1.45.0
 
