Fix kiali-helm for debian build
This commit corrects the debian build for the kiali-helm
package.

Story: 2009912
Task: 45191

Change-Id: I97387a17f3c5ed7e2a1198ec32a2e6df93367bc6
Signed-off-by: Teresa Ho <teresa.ho@windriver.com>

--- a/kiali-helm/debian/deb_folder/rules
+++ b/kiali-helm/debian/deb_folder/rules
@@ -14,6 +14,6 @@ override_dh_auto_build:
 override_dh_auto_install:
 	# Install the app tar file.
 	install -d -m 755 $(CHART_FOLDER)
-	install -p -D -m 755 *.tgz $(CHART_FOLDER)
+	install -p -D -m 755 _output/charts/*.tgz $(CHART_FOLDER)
 
 override_dh_auto_test:
