Expose Kiali service using nodeport
This commit is to set the service type of Kiali to nodeport
in order to allow assessing Kiali UI.

The commit also corrects the imagePullSecrets, image
hub and tag for istio-operator.

Test Plan:
Pass: Apply Istio application and open Kiali UI.

Story: 2009912
Task: 45308

Change-Id: I3fc7c0f8cb2859cdaf2ee1a69396b9dd3dbfe173
Signed-off-by: Teresa Ho <teresa.ho@windriver.com>

--- a/stx-istio-helm/stx-istio-helm/fluxcd-manifests/istio-operator/istio-operator-static-overrides.yaml
+++ b/stx-istio-helm/stx-istio-helm/fluxcd-manifests/istio-operator/istio-operator-static-overrides.yaml
@@ -4,6 +4,8 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
+hub: registry.local:9001/docker.io/istio
+tag: 1.13.3
 replicaCount: 1
 images:
   tags:
@@ -14,7 +16,8 @@ images:
 
 # ImagePullSecrets for operator ServiceAccount, list of secrets in the same namespace
 # used to pull operator image. Must be set for any cluster configured with private docker registry.
-imagePullSecrets: [{"name": "default-registry-key"}]
+imagePullSecrets:
+  - default-registry-key
 
 # Used to replace istioNamespace to support operator watch multiple namespaces.
 watchedNamespaces: istio-system
