Include kiali-helm for debian build
This commit added the missing kiali-helm to the debian build.
It also cleaned up the debian build rules for stx-istio-helm.

Test Plan:
PASS: Test istio application in Debian

Story: 2009912
Task: 45389

Change-Id: I88810b8a408b92cf76f84a8040ca94d93300fdb4
Signed-off-by: Teresa Ho <teresa.ho@windriver.com>

--- a/stx-istio-helm/debian/deb_folder/control
+++ b/stx-istio-helm/debian/deb_folder/control
@@ -4,6 +4,7 @@ Priority: optional
 Maintainer: StarlingX Developers <starlingx-discuss@lists.starlingx.io>
 Build-Depends: debhelper-compat (= 13),
  istio-helm,
+ kiali-helm,
  chartmuseum,
  helm,
  procps,
