Fix app-istio removal cleanup
The application removal of app-istio would hang and not all of istio
pods are not deleted.

The lifecycle plugin is added to trigger the deletion of the istio
components before the removal of the entire istio application.

Test Plan:
Pass: application-remove success
Pass: regression

Story: 2009912
Task: 45493

Change-Id: If7e38ee8428c617a945241d6c2d69a28ba70f333
Signed-off-by: Teresa Ho <teresa.ho@windriver.com>

--- a/python-k8sapp-istio/k8sapp_istio/setup.cfg
+++ b/python-k8sapp-istio/k8sapp_istio/setup.cfg
@@ -36,5 +36,8 @@ systemconfig.helm_plugins.istio =
     001_istio-operator = k8sapp_istio.helm.istio_operator:IstioHelm
     002_kiali-server = k8sapp_istio.helm.kiali_server:KialiHelm
 
+systemconfig.app_lifecycle =
+    istio = k8sapp_istio.lifecycle.lifecycle_istio:IstioAppLifecycleOperator
+
 [wheel]
 universal = 1
