--- a/stx-istio-helm/stx-istio-helm/fluxcd-manifests/istio-operator/istio-operator.yaml
+++ b/stx-istio-helm/stx-istio-helm/fluxcd-manifests/istio-operator/istio-operator.yaml
@@ -25,6 +25,8 @@ spec:
     pilot:
       image: registry.local:9001/docker.io/istio/pilot:1.13.3
     global:
+      imagePullSecrets:
+        - default-registry-key
       proxy:
         image: registry.local:9001/docker.io/istio/proxyv2:1.13.3
       proxy_init:
