cni: use /var/opt/cni
This will allow bootstrap on Debian to work without unlocking ostree.

Currently /opt/cni is a symlink to a /usr subdir.
/usr is mounted read-only. This lead to issues when containers try to
write inside /opt/cni.
Update software to use /var/opt/cni instead.

The problematic symlink is created by the meta-lat component.
This commit can be reverted later if the meta-lat design is changed.

Prevent possible future issues and keep consistency for logic around
kubernetes by redirecting /opt/libexec to /var/opt/libexec also.

This is an enhancement to the following series:
https://review.opendev.org/c/starlingx/app-istio/+/844296
https://review.opendev.org/c/starlingx/ansible-playbooks/+/844295
https://review.opendev.org/c/starlingx/ansible-playbooks/+/825354
https://review.opendev.org/c/starlingx/integ/+/825346
https://review.opendev.org/c/starlingx/stx-puppet/+/825355
https://review.opendev.org/c/starlingx/integ/+/843965

Test on AIO-SX:
CentOS:
PASS: istio applied
Debian:
PASS: istio applied

Depends-On: https://review.opendev.org/c/starlingx/ansible-playbooks/+/844868
Story: 2009101
Task: 44311
Signed-off-by: Dan Voiculeasa <dan.voiculeasa@windriver.com>
Change-Id: I3eb9b930ec10c94506ffafb795b80edcb2b44531

--- a/stx-istio-helm/stx-istio-helm/fluxcd-manifests/istio-operator/istio-operator.yaml
+++ b/stx-istio-helm/stx-istio-helm/fluxcd-manifests/istio-operator/istio-operator.yaml
@@ -14,7 +14,7 @@ spec:
         k8s.v1.cni.cncf.io/networks: istio-cni
     cni:
       chained: false
-      cniBinDir: /opt/cni/bin
+      cniBinDir: /var/opt/cni/bin
       cniConfDir: /etc/cni/net.d
       cniConfFileName: istio-cni.conf
       excludeNamespaces:
