Standardize app configs
Fixed versioning and adjusted some build files
to bring them as close to a standard as possible.

- Removed centos files
- Added version tracking via GITREVCOUNT
- Fixed mismatch in plugin name, set to python3-k8sapp-<app>
- Standardized plugin debian files (rules, *.install)
- Plugin wheels saved to /plugin instead of /plugin/<app>

Test Plan:
PASS - Build-pkgs -a
PASS - Build-image
PASS - Install, bootstrap, unlock
PASS - app tarball contains wheel file
PASS - wheel versioning updated properly

Story: 2010542
Task: 47199

Signed-off-by: Leonardo Fagundes Luz Serrano <Leonardo.FagundesLuzSerrano@windriver.com>
Change-Id: Ia945e29b1b02195234119b75f6ce155d58e92bca

--- a/python3-k8sapp-istio/debian/meta_data.yaml
+++ b/python3-k8sapp-istio/debian/meta_data.yaml
@@ -1,7 +1,7 @@
 ---
-debname: stx-istio-helm
+debname: python3-k8sapp-istio
 debver: 1.0-1
-src_path: stx-istio-helm
+src_path: k8sapp_istio
 revision:
   dist: $STX_DIST
   GITREVCOUNT:
