--- a/python3-k8sapp-istio/k8sapp_istio/setup.cfg
+++ b/python3-k8sapp-istio/k8sapp_istio/setup.cfg
@@ -39,5 +39,5 @@ systemconfig.helm_plugins.istio =
 systemconfig.app_lifecycle =
     istio = k8sapp_istio.lifecycle.lifecycle_istio:IstioAppLifecycleOperator
 
-[wheel]
+[bdist_wheel]
 universal = 1
