--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -26,11 +26,11 @@
       - starlingx/update
       - starlingx/utilities
     files:
-      - python-k8sapp-istio/*
+      - python3-k8sapp-istio/*
     vars:
         tox_envlist: py39
         python_version: 3.9
-        tox_extra_args: -c python-k8sapp-istio/k8sapp_istio/tox.ini
+        tox_extra_args: -c python3-k8sapp-istio/k8sapp_istio/tox.ini
 - job:
     name: stx-app-istio-upload-git-mirror
     parent: upload-git-mirror
@@ -56,10 +56,10 @@
       - starlingx/update
       - starlingx/utilities
     files:
-      - python-k8sapp-istio/*
+      - python3-k8sapp-istio/*
     vars:
       tox_envlist: pylint
-      tox_extra_args: -c python-k8sapp-istio/k8sapp_istio/tox.ini
+      tox_extra_args: -c python3-k8sapp-istio/k8sapp_istio/tox.ini
 
 - secret:
     name: stx-app-istio-github-secret
