--- a/python3-k8sapp-istio/k8sapp_istio/tox.ini
+++ b/python3-k8sapp-istio/k8sapp_istio/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = flake8,py27,py36,py39,pylint,bandit
+envlist = flake8,py27,py39,pylint,bandit
 minversion = 1.6
 # skipsdist = True
 #,pip-missing-reqs
@@ -23,7 +23,7 @@ allowlist_externals = bash
 install_command = pip install \
     -v -v -v --use-deprecated legacy-resolver \
     -c{toxinidir}/upper-constraints.txt \
-    -c{env:UPPER_CONSTRAINTS_FILE:https://opendev.org/openstack/requirements/raw/branch/stable/stein/upper-constraints.txt} \
+    -c{env:UPPER_CONSTRAINTS_FILE:https://opendev.org/openstack/requirements/raw/branch/stable/yoga/upper-constraints.txt} \
     {opts} {packages}
 
 # Note the hash seed is set to 0 until can be tested with a
@@ -78,13 +78,6 @@ install_command = pip install \
     -c{toxinidir}/upper-constraints.txt \
     -c{env:UPPER_CONSTRAINTS_FILE:https://opendev.org/starlingx/root/raw/branch/master/build-tools/requirements/debian/upper-constraints.txt} \
     {opts} {packages}
-commands =
-  {[testenv]commands}
-  stestr run {posargs}
-  stestr slowest
-
-[testenv:py36]
-basepython = python3.6
 commands =
   {[testenv]commands}
   stestr run {posargs}
