--- a/python-k8sapp-istio/k8sapp_istio/tox.ini
+++ b/python-k8sapp-istio/k8sapp_istio/tox.ini
@@ -17,7 +17,7 @@ distshare={toxworkdir}/.tox/distshare
 sitepackages = False
 
 # tox is silly... these need to be separated by a newline....
-whitelist_externals = bash
+allowlist_externals = bash
                       find
 
 install_command = pip install \
@@ -111,6 +111,12 @@ commands = bandit --ini tox.ini -n 5 -r k8sapp_istio
 [testenv:pylint]
 basepython = python3
 sitepackages = False
+
+install_command = pip install \
+    -v -v -v --use-deprecated legacy-resolver \
+    -c{toxinidir}/upper-constraints.txt \
+    -c{env:UPPER_CONSTRAINTS_FILE:https://opendev.org/starlingx/root/raw/branch/master/build-tools/requirements/debian/upper-constraints.txt} \
+    {opts} {packages}
 
 deps = {[testenv]deps}
        pylint
