Update app-istio pkgs ver based on git
Update debian package versions to use git commits for:
- istio-helm
- kiali-helm

The Debian packaging has been changed to reflect all the
git commits under the directory, and not just the commits
to the metadata folder.

This ensures that any new code submissions under those
directories will increment the versions.

Test Plan:
  PASS: build-pkgs -p istio-helm
  PASS: build-pkgs -p kiali-helm
  PASS: pkgs stx version increments

Story: 2010550
Task: 47577
Task: 47578

Signed-off-by: Mohammad Issa <mohammad.issa@windriver.com>
Change-Id: Icd9ee34eef783d21d5c8168c2ced5a25a8e291ee

--- a/kiali-helm/debian/meta_data.yaml
+++ b/kiali-helm/debian/meta_data.yaml
@@ -12,4 +12,6 @@ src_files:
   - files/repositories.yaml
 revision:
   dist: $STX_DIST
-  PKG_GITREVCOUNT: true
+  GITREVCOUNT:
+    SRC_DIR: ${MY_REPO}/stx/app-istio/kiali-helm
+    BASE_SRCREV: 28fb552abeb93fce220528fa4e29027f8ff394f6
