Up-version: Istio to 1.17.2 and Kiali to 1.66.0
This commit up-versions the Istio helm charts to v1.17.2 and Kiali
helm charts to v1.66.0, the latest version at the time.
Istio v1.17.2 and Kiali v1.66.0 are compatible with each other
as per support matrix.

Test Plan:

PASS: Build the Istio application and manually verify Istio and
      Kiali packages are created successfully.

PASS: Run full build, system install, bootstrap and unlock(SX)

PASS: Upload the Istio package using system command and verify
      the upload status of the Istio package.

PASS: Apply the Istio package using system command and verify
      the following:
	- Istio application applied successfully
	- Pulled correct images of Istio and Kiali
	- Helm chart version verification
	- Istio and Kiali pods status

PASS: Verified the removal and deletion of Istio package using
      system command.

PASS: Verified Istio injection functionality. Labelled a
      namespace with istio-injection=enabled. Killed
      the running pod and verified a new pod is created with
      the injected sidecar. The original pod has 1/1 READY
      containers, and the pod with injected sidecar has
      2/2 READY containers.

PASS: Disable Istio injection and checked pods are getting
      created without side car

Story: 2010714
Task: 48170

Signed-off-by: Sirin Shaikh <sirin.shaikh@windriver.com>
Change-Id: I452873e802c8399b16b628b6f4d436b15751d4a5

--- a/kiali-helm/debian/deb_folder/rules
+++ b/kiali-helm/debian/deb_folder/rules
@@ -9,6 +9,7 @@ export CHART_FOLDER = $(ROOT)/usr/lib/helm
 
 override_dh_auto_build:
 	# Create the TGZ file.
+	apt install curl -y
 	make build-helm-charts
 
 override_dh_auto_install:
